@@ -12,6 +12,9 @@ Version NEXT
 	  inetd to work correctly using fspd socket activation.
 	fspd exits with err 8 if can't write pidfile after forking
 	add error exit 9 if fspd can't send back reply to client
+	correct check for native largefiles. Because we are using unsigned
+	  long internaly as pointer to offset for portability, we have to
+	  be sure that usingned long is 8 or more bytes long
 
 Version 2.8.1b29 - 24 Aug 2019
 	added scons command line argument without-fspscan=yes for building
